--- a/web/css/layout.css
+++ b/web/css/layout.css
@@ -2,3 +2,8 @@ label {
     font-weight: bolder;
     display: block;
 }
+body{
+    background: #000;
+    color: #DDD;
+    font-family: 'Helvetica', 'Lucida Grande', 'Arial', sans-serif;
+}
